# BookBot

./: CMakeLists.txt  README.md  package.xml
launch/: amcl_move_base.launch  gazebo.launch  gmapping.launch  key_teleop.launch  visual_rviz.launch
maps/: bookstore_maps.yaml
models/aws_robomaker_retail_BookE_01/: model.sdf
param/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
scripts/: nav_goal.py
urdf/: mybot.gazebo  mybot.urdf  mybot.xacro
worlds/: bookstore.world
